--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ scikit-learn==1.8.0
 scipy==1.17.0
 imbalanced-learn==0.14.1
 joblib==1.5.3
+xgboost==2.1.3
+lightgbm==4.5.0
 
 # ============================================================================
 # VISUALIZATION
